# fgk-tool

./: .gitignore  Makefile  README.md  pyproject.toml
fgk/: cli.py  core.py
tests/: test_fgk.py
