[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgk"
version = "0.1.0"
description = "FGK (Faller-Gallager-Knuth) adaptive Huffman encoding in pure Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eruslanov Ivan", email = "iv.eruslanov@yandex.ru"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "loguru>=0.7.0",
]
requires-python = ">=3.10"

[project.scripts]
fgk = "fgk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fgk*"]
